--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "svelte": "^3.44.0",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^1.30.0",
+    "svelte-routing": "^1.6.0"
   }
 }
